# weatherapp

./: .gitignore  MANIFEST.in  README.rst  db.sqlite3  readme.md  requirements.txt  setup.cfg
apps/authentication/: admin.py  forms.py  models.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/templates/authentication/: registration.html
apps/common/templates/common/: messages.html
apps/home/: urls.py  views.py
apps/home/templates/home/: landing.html
apps/weather/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/weather/management/commands/: fetch_forecast.py
apps/weather/migrations/: 0001_initial.py
apps/weather/templates/weather/: index.html
static/js/: bootstrap.min.js
templates/: base.html
templates/registration/: login.html
weather_app.egg-info/: PKG-INFO  SOURCES.txt
weatherapp/: settings.py  urls.py
